--- a/app/src/main/res/layout/habit.xml
+++ b/app/src/main/res/layout/habit.xml
@@ -7,7 +7,7 @@
     </data>
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="140dp"
+            android:layout_height="wrap_content"
             android:layout_margin="4dp">
         <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
