--- a/app/src/main/res/layout/edit_habit_fragment.xml
+++ b/app/src/main/res/layout/edit_habit_fragment.xml
@@ -3,14 +3,14 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
-        <variable name="viewModel" type="com.ninele7.tracker.EditHabitViewModel"/>
+        <variable name="viewModel" type="com.ninele7.tracker.ui.edit.habit.EditHabitViewModel"/>
     </data>
     <ScrollView android:layout_width="match_parent"
                 android:layout_height="match_parent">
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:context=".EditHabitFragment"
+                tools:context=".ui.edit.habit.EditHabitFragment"
                 android:orientation="vertical"
                 android:layout_margin="4dp">
             <EditText
@@ -87,8 +87,8 @@
                 <androidx.coordinatorlayout.widget.CoordinatorLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent">
-                    <com.ninele7.tracker.GradientView android:layout_width="1600dp"
-                                                      android:layout_height="120dp"/>
+                    <com.ninele7.tracker.ui.util.GradientView android:layout_width="1600dp"
+                                                              android:layout_height="120dp"/>
                     <androidx.recyclerview.widget.RecyclerView android:layout_width="1600dp"
                                                                android:layout_height="120dp"
                                                                app:layoutManager="LinearLayoutManager"
