--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -55,7 +55,7 @@
         <androidx.fragment.app.FragmentContainerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:name="com.ninele7.tracker.ui.main.BottomSheetFragment"
+                android:name="com.ninele7.tracker.presentation.ui.main.BottomSheetFragment"
                 android:id="@+id/bottom_sheet_content"/>
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
