--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -4,7 +4,7 @@
             android:id="@+id/navigation_graph"
             app:startDestination="@id/habitsFragment">
     <fragment android:id="@+id/habitsFragment"
-              android:name="com.ninele7.tracker.ui.main.MainFragment"
+              android:name="com.ninele7.tracker.presentation.ui.main.MainFragment"
               android:label="@string/app_name">
         <action android:id="@+id/action_habitsFragment_to_editHabitFragment"
                 app:destination="@id/editHabitFragment"/>
@@ -12,12 +12,12 @@
                 app:destination="@id/aboutFragment"/>
     </fragment>
     <fragment android:id="@+id/editHabitFragment"
-              android:name="com.ninele7.tracker.ui.edit.habit.EditHabitFragment"
+              android:name="com.ninele7.tracker.presentation.ui.edit.EditHabitFragment"
               android:label="@string/edit_habit">
         <argument android:name="id" app:argType="java.util.UUID"
                   app:nullable="true"/>
     </fragment>
     <fragment android:id="@+id/aboutFragment"
-              android:name="com.ninele7.tracker.ui.about.AboutFragment"
+              android:name="com.ninele7.tracker.presentation.ui.about.AboutFragment"
               android:label="@string/about"/>
 </navigation>
